--- a/polygon-django/requirements.txt
+++ b/polygon-django/requirements.txt
@@ -4,7 +4,7 @@ cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
-cryptography==3.4.7
+# cryptography==3.4.7
 Django==3.2.6
 djangorestframework==3.12.4
 fcm-django==1.0.4
@@ -42,4 +42,4 @@ sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.6
 beautifulsoup4==4.9.3
-lxml==4.6.3
+# lxml==4.6.3
